--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ charset-normalizer==3.3.2
 idna==3.7
 PyAudio==0.2.14
 requests==2.32.3
+schedule==1.2.2
 SpeechRecognition==3.10.4
 typing_extensions==4.12.2
 urllib3==2.2.2
