--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,31 @@
+aiko_services==0.5
+asciimatics==1.15.0
+avro==1.11.3
+avro-validator==1.2.1
+blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+Flask==3.0.3
 idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==1.26.4
+paho-mqtt==1.6.1
+pillow==10.2.0
 PyAudio==0.2.14
-requests==2.32.3
+pyfiglet==1.0.2
+pyperclip==1.8.2
+pywin32==306
+requests==2.31.0
 schedule==1.2.2
+six==1.16.0
 SpeechRecognition==3.10.4
+transitions==0.9.2
 typing_extensions==4.12.2
 urllib3==2.2.2
+wcwidth==0.2.13
+Werkzeug==3.0.4
+wrapt==1.16.0
