--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "open-source framework for AI agents"
+name = "open_source_framework_for_AI_agents"
 version = "0.1.0"
 description = "CPTB - final year computer science project"
 authors = [
