--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "requests==2.31.0",
     "rfc3986==1.5.0",
     "schedule==1.2.2",
+    "setuptools=75.0.0",
     "six==1.16.0",
     "sniffio==1.3.1",
     "SpeechRecognition==3.10.4",
