--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ authors = [
 ]
 
 dependencies = [
-    "aiko_services==0.5",
+#   "aiko_services==0.5",
+    "aiko_services @ git+https://git@github.com/geekscape/aiko_services",
     "asciimatics==1.15.0",
     "avro==1.11.3",
     "avro-validator==1.2.1",
@@ -50,7 +51,7 @@ dependencies = [
     "requests==2.31.0",
     "rfc3986==1.5.0",
     "schedule==1.2.2",
-    "setuptools=75.0.0",
+    "setuptools==75.0.0",
     "six==1.16.0",
     "sniffio==1.3.1",
     "SpeechRecognition==3.10.4",
